tests/linear/linear-non-005/expected
Example Non-Linearly Wired Circuits
Input is dangling
## Circuits
```
// LOG : Starting Linear NetList 
// LOG : Parsing Successful
../../shared/linear-non/DanglingInput.sv:5:22-26: Linearity Error:
left := USED

```
## Verilator
```
%Warning-UNUSED: ../../shared/linear-non/DanglingInput.sv:3: Signal is not used: 'right'
                                                           : ... In instance DanglingInput
              , input  logic right
                             ^~~~~
                 ... Use "/* verilator lint_off UNUSED */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
